--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,6 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.30.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "framer-motion": "^12.23.26"
+    "@dnd-kit/core": "^6.3.1"
   }
 }
