--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,9 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1"
+    "@dnd-kit/core": "^6.3.1",
+    "@tanstack/react-query": "^5.90.12",
+    "date-fns": "^4.1.0",
+    "zustand": "^5.0.9"
   }
 }
