--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,6 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "tailwindcss": "^4.1.17",
@@ -26,7 +24,10 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@tanstack/react-query": "^5.90.12",
+    "@types/react-virtualized": "^9.22.3",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.560.0",
+    "react-virtualized": "^9.22.6",
     "zustand": "^5.0.9"
   }
 }
