--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,8 @@
     "@tanstack/react-query": "^5.90.12",
     "@types/react-virtualized": "^9.22.3",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.560.0",
-    "react-virtualized": "^9.22.6",
     "zustand": "^5.0.9"
   }
 }
