--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,5 +14,8 @@
   },
   "background": {
     "service_worker": "dist/background.js"
+  },
+  "chrome_url_overrides": {
+    "newtab": "newtab.html"
   }
 }
